--- a/style3.css
+++ b/style3.css
@@ -6,5 +6,5 @@ body {
     text-align: center;
         font-family: 'Times New Roman' , Times, Serif;
         background: white;
-        color: yellow;
+        color: red;
 }
